--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,7 +39,9 @@ a {
 /*rodape a partir daqui */
 
 div .mae{
-  margin: 0px;
+  background-color: red;
+  width: 100%;
+  height:600px;
 }
 
 #rodape_container{
